--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^4.2.0",
+    "recoil": "^0.0.7",
     "styled-components": "^5.1.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
