--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es6",
     "jsx": "react",
     "allowJs": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots" : ["./typings", "./node_modules/@types"]
   }
 }
